# cpp_study_guide

perfect_forwarding/: CMakeLists.txt  readme.md
perfect_forwarding/src/: perfect_forwarding.cpp
push_and_emplace_back/: CMakeLists.txt  readme.md
push_and_emplace_back/src/: custom_deleter_issue.cpp  push_and_emplace_back.cpp  resource_management.cpp
references/: CMakeLists.txt  readme.md
references/src/: references.cpp
